[project]
name = "trips-map"
version = "0.1.0"
description = "A tool to visualize your trips on a map"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
    "watchdog>=6.0.0",
]
