[project]
name = "trips-map"
version = "0.1.0"
description = "A tool to visualize your trips on a map"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
    "watchdog>=6.0.0",
]
